Create doctor, profile section layout

--- a/app/src/main/res/layout/profile_patient_section.xml
+++ b/app/src/main/res/layout/profile_patient_section.xml
@@ -63,163 +63,11 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="img_profile"
         />
-    <LinearLayout
-        android:id="@+id/layout_appointment"
-        android:layout_width="0dp"
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo"
-        app:layout_constraintEnd_toStartOf="@+id/layout_savedDoctors"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10"
-            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Appointments"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:textColor="@android:color/darker_gray"
-            />
 
-    </LinearLayout>
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_appointment"
-        android:layout_width="1dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        app:layout_constraintStart_toEndOf="@id/layout_appointment"
-        app:layout_constraintTop_toTopOf="@id/layout_appointment"
-        app:layout_constraintBottom_toBottomOf="@id/layout_appointment"
-        />
-    <LinearLayout
-        android:id="@+id/layout_savedDoctors"
-        android:layout_width="0dp"
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        app:layout_constraintStart_toEndOf="@+id/layout_appointment"
-        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo"
-        app:layout_constraintEnd_toStartOf="@+id/layout_reviews"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="100"
-            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Saved doctors"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:textColor="@android:color/darker_gray"
-            />
+    <include
+        android:id="@+id/include_statisticsSection"
+        layout="@layout/patient_statistics_section" />
 
-    </LinearLayout>
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_reviews"
-        android:layout_width="1dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        app:layout_constraintStart_toEndOf="@id/layout_savedDoctors"
-        app:layout_constraintTop_toTopOf="@id/layout_savedDoctors"
-        app:layout_constraintBottom_toBottomOf="@id/layout_savedDoctors"
-        />
-    <LinearLayout
-        android:id="@+id/layout_reviews"
-        android:layout_width="0dp"
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_20sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        app:layout_constraintStart_toEndOf="@+id/layout_savedDoctors"
-        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo"
-        app:layout_constraintEnd_toEndOf="parent"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4.5"
-            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your reviews"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:textColor="@android:color/darker_gray"
-            />
-
-    </LinearLayout>
-<androidx.constraintlayout.widget.Barrier
-    android:id="@+id/barrier_profile"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:barrierDirection="bottom"
-    app:constraint_referenced_ids="layout_reviews"
-    />
-    <LinearLayout
-        android:id="@+id/layout_patientProfile"
-        android:background="@drawable/custom_card_view_drawable"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:orientation="horizontal"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        app:layout_constraintTop_toBottomOf="@id/barrier_profile">
-        <Button
-            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#1ACFCFCF"
-            android:clickable="false"
-            app:icon="@drawable/ic_profile_avatar"
-            app:iconTint="@android:color/black" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Your profile"
-            android:paddingStart="@dimen/_10sdp"
-            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_forward_settings"
-            android:layout_gravity="center"
-            app:tint="@color/md_theme_primary"
-            />
-    </LinearLayout>
 
     <!--Profile Verification & Activation Section-->
     <include
