--- a/app/src/main/res/layout/profile_doctor_section.xml
+++ b/app/src/main/res/layout/profile_doctor_section.xml
@@ -76,126 +76,9 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="img_profile,tv_email" />
 
-    <LinearLayout
-        android:id="@+id/layout_appointment"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        app:layout_constraintEnd_toStartOf="@+id/layout_reviews"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="10"
-            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Your patients"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:textColor="@android:color/darker_gray" />
-
-    </LinearLayout>
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_appointment"
-        android:layout_width="1dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        app:layout_constraintBottom_toBottomOf="@id/layout_appointment"
-        app:layout_constraintStart_toEndOf="@id/layout_appointment"
-        app:layout_constraintTop_toTopOf="@id/layout_appointment" />
-
-    <LinearLayout
-        android:id="@+id/layout_reviews"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        app:layout_constraintEnd_toStartOf="@+id/layout_ratings"
-        app:layout_constraintStart_toEndOf="@+id/layout_appointment"
-        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="100"
-            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Your reviews"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:textColor="@android:color/darker_gray" />
-
-    </LinearLayout>
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_reviews"
-        android:layout_width="1dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        app:layout_constraintBottom_toBottomOf="@id/layout_reviews"
-        app:layout_constraintStart_toEndOf="@id/layout_reviews"
-        app:layout_constraintTop_toTopOf="@id/layout_reviews" />
-
-    <LinearLayout
-        android:id="@+id/layout_ratings"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_20sdp"
-        android:paddingBottom="@dimen/_10sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/layout_reviews"
-        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="4.5"
-            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Average ratings"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:textColor="@android:color/darker_gray" />
-
-    </LinearLayout>
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_15sdp"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="layout_appointment" />
+    <include
+        android:id="@+id/include_statisticsSection"
+        layout="@layout/doctor_statistics_section" />
 
     <LinearLayout
         android:id="@+id/layout_doctorProfile"
@@ -210,7 +93,7 @@
         android:paddingTop="@dimen/_5sdp"
         android:paddingEnd="@dimen/_15sdp"
         android:paddingBottom="@dimen/_5sdp"
-        app:layout_constraintTop_toBottomOf="@id/barrier_profile">
+        app:layout_constraintTop_toBottomOf="@id/include_statisticsSection">
 
         <Button
             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
